# egile-investor

./: .env.example  .gitignore  AGENT_COMPARISON.md  README.md  debug_generic_mcp.py  debug_mcp.py  pyproject.toml
data/: sp500.yml
docs/: enhanced_screening.md
egile_investor/: __init__.py  agent.py  ai_agent.py  ai_agent_simple.py  ai_agent_ultra_simple.py  client.py  config.py  copilot_mcp_agent.py  exceptions.py  generic_mcp_agent.py  server.py  server_standard.py
examples/: README.md  ai_investment_simple.py  basic_stock_analysis.py  interactive_copilot.py  market_screening.py  sp500_screening_example.py
tmp/: debug_mcp.py  quick_test.py  test_basic.py  test_context.py  test_package.py  test_quick.py
